<resources>
    <string name="app_name">FAF stopwatch</string>

    <string name="timer_content" translatable="false">0:00.00</string>
    <string name="total_time_title">Total time</string>
    <string name="special_time_title">Overall fencing time</string>
    <string name="solo_label">Solo</string>
    <string name="synchron_label">Synchron</string>
    <string name="duet_label">Duet</string>
    <string name="group_label">Group</string>
    <string name="button_start_again_text">Start again</string>
    <string name="action_settings">Settings</string>
    <string name="overrun_title">Overrun: %s s</string>
    <string name="underrun_title">Underrun: %s s</string>
    <string name="preferences_title">Preferences</string>
    <string name="preferences_total_title">Main settings</string>
    <string name="preference_stop_delay_title">Fencing timer stop delay</string>
    <string name="preference_stop_delay_summary">%d sec.\n\nDelay in seconds between stop command and actual stopping of the timer</string>
    <string name="preference_strict_title">Strict control</string>
    <string name="preference_strict_summary">Use ordinary or two-finger tap for control</string>
    <string name="preference_vibration_title">Vibration</string>
    <string name="preference_vibration_summary">Use vibration to confirm significant control actions</string>
    <string name="preference_timing_screen_title">Timing for disciplines</string>
    <string name="preference_total_category_title">Total performance duration</string>
    <string name="preference_total_summary">Overall duration of this nomination</string>
    <string name="preference_fencing_category_title">Minimal fencing duration</string>
    <string name="preference_fencing_summary">Duration of fencing in this nomination</string>
    <string name="preference_about_title">About application</string>
    <string name="preference_key_about_version">Version %1$s</string>
    <string name="preference_key_about_description">&#169; Sergei Dryannyikh (nygoth@gmail.com), 2017</string>
    <string name="timepicker_minutes_title">Minutes:</string>
    <string name="timepicker_seconds_title">Seconds:</string>
</resources>
