<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:padding="@dimen/time_title_padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/discipline_selector"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_Solo"
            style="@style/DisciplineSelectorStyle"
            android:text="@string/solo_label"/>

        <RadioButton
            android:id="@+id/radio_Synchro"
            style="@style/DisciplineSelectorStyle"
            android:text="@string/synchron_label"/>

        <RadioButton
            android:id="@+id/radio_Duet"
            style="@style/DisciplineSelectorStyle"
            android:text="@string/duet_label"/>

        <RadioButton
            android:id="@+id/radio_Group"
            style="@style/DisciplineSelectorStyle"
            android:text="@string/group_label"/>
    </RadioGroup>

    <LinearLayout
         android:id="@+id/timer_layout"
         android:orientation="vertical"
         android:animateLayoutChanges="true"
         android:layout_below="@id/discipline_selector"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

        <include layout="@layout/total_timer_layout"/>

        <include layout="@layout/special_timer_layout"/>

        <Button
            android:id="@+id/button_start_again"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="activateTotalTimerView"
            android:text="@string/button_start_again_text"/>
    </LinearLayout>

</RelativeLayout>